syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";



service Banner {

  rpc GetBannerList(BannerRequest) returns(BannerResponseList);
  rpc CreateBanner(CreateBannerRequest) returns(google.protobuf.Empty);
  rpc DeleteBanner(DeleteBannerRequest) returns(google.protobuf.Empty);
  rpc UpdateBanner(UpdateBannerRequest) returns(google.protobuf.Empty);
}

message CreateBannerRequest {
  string image = 2;
  string url = 3;
  int32 index = 4;
}

message UpdateBannerRequest{
  string id = 1;
  string image = 2;
  string url = 3;
  int32 index = 4;
}
//
message DeleteBannerRequest {
  string id = 1;
}

message BannerRequest  {
  int32  pageIndex = 1;
  int32  pageSize = 2;
}

message BannerResponse{
  string  id = 1;
  string  image = 2;
  string  url = 3;
  int32  index = 4;
}

message BannerResponseList {
  int32 total = 1;
  repeated  BannerResponse data = 2;
}
